observer error fix + card alignment

--- a/frontend/src/styles/cardcss.css
+++ b/frontend/src/styles/cardcss.css
@@ -2,15 +2,15 @@
 	position: relative;
 	cursor: pointer;
 	overflow: hidden;
-	transition: transform 150ms ease, box-shadow 100ms ease;
+	transition: box-shadow 200ms ease;
 	padding: var(--mantine-spacing-xl);
 	padding-left: calc(var(--mantine-spacing-xl) * 2);
-	transform-origin: center;
+	/* transform-origin: center; */
 }
 
 .card:hover {
 	box-shadow: var(--mantine-shadow-md);
-	transform: scale(1.02);
+	/* transform: scale(1.02); */
 }
 
 .card::before {
