--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,6 +1,6 @@
 .app {
 	font-family: Arial, sans-serif;
-	max-width: 600px;
+	max-width: 650px;
 	margin: auto;
 	text-align: center;
 }
